--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,4 +1,4 @@
-@import './constants.scss';
-@import './easing.scss';
-@import './responsive.scss';
-@import './typography.scss';
+@import './core/constants.scss';
+@import './core/easing.scss';
+@import './core/responsive.scss';
+@import './core/typography.scss';
